--- a/tasks.json
+++ b/tasks.json
@@ -42,6 +42,42 @@
             "problemMatcher": []
         },
         {
+            "label": "Flash Target via OpenOCD",
+            "type": "process",
+            "command": "true",
+            "osx": {
+                "command" : "make",
+                "args": [
+                    "flash"
+                ]
+            },
+            "linux": {
+                "args": [
+                    "-f",
+                    "/usr/share/openocd/scripts/board/stm32f4discovery.cfg",
+                ]
+            },
+            "windows": {
+                "args": [
+                    "-f",
+                    "c:\\Program Files\\openocd-0.10.0\\scripts\\board\\stm32f4discovery.cfg",
+                ]
+            },
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "options": {
+                "cwd": "${workspaceRoot}/build"
+            },
+            "problemMatcher": []
+        },        
+        {
             "label": "Start OpenOCD (GDB Server)",
             "type": "process",
             "command" : "true",
