--- a/launch.json
+++ b/launch.json
@@ -51,32 +51,19 @@
         },
         {
             "name": "Black Magic Probe",
-            "type": "cppdbg",
-            "request": "launch",
-            /* "preLaunchTask": "build", */
             "cwd": "${workspaceRoot}",
-            "MIMode": "gdb",
-            "targetArchitecture": "arm",
-            "logging": {
-                "engineLogging": true
-            },
-            "program": "${workspaceRoot}/build/common/firmware.elf",
-            "miDebuggerPath": "arm-none-eabi-gdb",
-            "customLaunchSetupCommands": [
-                { "text": "cd ${workspaceRoot}/build/common" },
-                { "text": "target extended-remote /dev/cu.usbmodem4D81905D1" },
-                { "text": "monitor swdp_scan" },
-                { "text": "attach 1" },
-                { "text": "file firmware.elf" },
-                { "text": "load" },
-                { "text": "cd ${workspaceRoot}" /* set bath back so VScode can find source files */ },
-                { "text": "set mem inaccessible-by-default off" },
-                { "text": "break main" }
-            ],
-            "serverLaunchTimeout": 10000,
-            "windows": {
-                "miDebuggerPath": "arm-none-eabi-gdb.exe"
-            }
+            "BMPGDBSerialPort": "/dev/cu.usbmodem4D81905D1",
+            "interface": "swd",
+            "type": "cortex-debug",
+            "request": "launch",
+            "servertype": "bmp",
+            "device": "STM32F401CC",
+            "svdFile" : "${workspaceRoot}/build/common/STM32.svd",
+            "executable": "${workspaceRoot}/build/common/firmware.elf",
+            // "preLaunchTask": "build",
+            "postLaunchCommands": [
+                "monitor traceswo"
+            ]
         }
     ]
 }
