Improve Windows Support

--- a/launch.json
+++ b/launch.json
@@ -71,11 +71,17 @@
             "name": "Segger J-Link (Launch)",
             "cwd": "${workspaceRoot}",
             "executable": "${workspaceRoot}/build/common/firmware.elf",
-            "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
             "servertype": "jlink",
-            "armToolchainPath": "/usr/local/bin/",
             "device": "${input:TargetCpu}",
-            "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib",
+            "windows": {
+                "armToolchainPath": "C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\10 2020-q4-major\\bin",
+                "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
+            },
+            "osx" : {
+                "armToolchainPath": "/usr/local/bin/",
+                "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
+                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib"
+            },
             "interface": "swd",
             //"serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
             // "jlinkscript":"${workspaceRoot}/BSP/SEGGER/K66FN2M0_emPower/Setup/Kinetis_K66_Target.js",
@@ -114,9 +120,6 @@
             //"serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
             // "jlinkscript":"${workspaceRoot}/BSP/SEGGER/K66FN2M0_emPower/Setup/Kinetis_K66_Target.js",
             "svdFile" : "${workspaceRoot}/build/common/STM32.svd",
-            "postLaunchCommands": [
-                "monitor SWO EnableTarget 0 0 0x101 0"
-            ],
             "swoConfig":{
                 "enabled":true,
                 "source":"probe",
