--- a/launch.json
+++ b/launch.json
@@ -76,6 +76,7 @@
             "windows": {
                 "armToolchainPath": "C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\10 2020-q4-major\\bin",
                 "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
+                "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll"
             },
             "osx" : {
                 "armToolchainPath": "/usr/local/bin/",
@@ -111,11 +112,18 @@
             "name": "Segger J-Link (Attach)",
             "cwd": "${workspaceRoot}",
             "executable": "${workspaceRoot}/build/common/firmware.elf",
-            "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
             "servertype": "jlink",
-            "armToolchainPath": "/usr/local/bin/",
             "device": "${input:TargetCpu}",
-            "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib",
+            "windows": {
+                "armToolchainPath": "C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\10 2020-q4-major\\bin",
+                "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
+                "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll"
+            },
+            "osx" : {
+                "armToolchainPath": "/usr/local/bin/",
+                "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
+                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib"
+            },
             "interface": "swd",
             //"serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
             // "jlinkscript":"${workspaceRoot}/BSP/SEGGER/K66FN2M0_emPower/Setup/Kinetis_K66_Target.js",
