--- a/launch.json
+++ b/launch.json
@@ -73,15 +73,15 @@
             "executable": "${workspaceRoot}/build/common/firmware.elf",
             "servertype": "jlink",
             "device": "${input:TargetCpu}",
+            "armToolchainPath": "/usr/local/bin/",
             "windows": {
                 "armToolchainPath": "C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\10 2020-q4-major\\bin",
                 "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
-                "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll"
+                "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll",
             },
-            "osx" : {
-                "armToolchainPath": "/usr/local/bin/",
+            "osx": {
                 "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
-                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib"
+                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib",
             },
             "interface": "swd",
             //"serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
@@ -114,15 +114,15 @@
             "executable": "${workspaceRoot}/build/common/firmware.elf",
             "servertype": "jlink",
             "device": "${input:TargetCpu}",
+            "armToolchainPath": "/usr/local/bin/",
             "windows": {
                 "armToolchainPath": "C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\10 2020-q4-major\\bin",
                 "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
                 "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll"
             },
             "osx" : {
-                "armToolchainPath": "/usr/local/bin/",
                 "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
-                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib"
+                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib",
             },
             "interface": "swd",
             //"serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
