--- a/launch.json
+++ b/launch.json
@@ -70,7 +70,7 @@
             "type": "cortex-debug",
             "name": "Segger J-Link (Launch)",
             "cwd": "${workspaceRoot}",
-            "executable": "${workspaceRoot}/build/common/firmware.elf",
+            "executable": "${input:FirmwareElf}",
             "servertype": "jlink",
             "device": "${input:TargetCpu}",
             "windows": {
@@ -167,6 +167,16 @@
                 "STM32F407VG",
                 "STM32F411RE",
             ]
+        },
+        {
+            "id" : "FirmwareElf",
+            "type" : "pickString",
+            "description": "Firmware ELF File",
+            "options" : [
+                "build/common/firmware.elf",
+                "build/common/contrib/f1usb/src/f1usb-minimal.elf",
+            ]
         }
+
     ]
 }
