--- a/launch.json
+++ b/launch.json
@@ -76,24 +76,27 @@
             "windows": {
                 "armToolchainPath": "C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\10 2020-q4-major\\bin",
                 "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
-                "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll",
+                // "rtos": "C:\\Program Files (x86)\\SEGGER\\JLink\\GDBServer\\RTOSPlugin_FreeRTOS.dll",
             },
             "osx": {
                 "armToolchainPath": "/usr/local/bin/",
                 "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
-                "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib",
+                // "rtos": "/Applications/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.dylib",
             },
             "linux": {
                 "armToolchainPath": "/usr/bin/",
                 "gdbPath": "gdb-multiarch",
                 "serverpath": "/usr/bin/JLinkGDBServer",
-                "rtos": "/opt/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.so",
+                // "rtos": "/opt/SEGGER/JLink/GDBServer/RTOSPlugin_FreeRTOS.so",
             },
             "interface": "swd",
             //"serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
             // "jlinkscript":"${workspaceRoot}/BSP/SEGGER/K66FN2M0_emPower/Setup/Kinetis_K66_Target.js",
-            "runToMain": false,
+            "runToEntryPoint" : "main",
+            "breakAfterReset" : true,
+            // "showDevDebugOutput": "both",
             "svdFile" : "${workspaceRoot}/build/common/STM32.svd",
+            "rtos" : "FreeRTOS",
             "postLaunchCommands": [
                 "monitor SWO EnableTarget 0 0 0x101 0"
             ],
